[project]
name = "hivetool"
version = "0.1.0"
description = "Hivemc 公式APIから戦績を取得してターミナルに美しく表示するCLIツール"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "requests>=2.31",
]

[project.scripts]
hivetool = "hivetool.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hivetool*"]
